Z-index fix

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
     box-shadow: 0 3px 8px -4px rgb(215 79 155);
     display: flex; 
     background-color: rgb(242, 241, 235);
-    z-index: 2;
+    z-index: 3;
 }
 
 .logo_img {
@@ -63,7 +63,7 @@
     top: 64px;
     right: 18px;
     background:rgb(242, 241, 235);
-    z-index: 3;
+    z-index: 4;
     padding: 10px;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.35);
     border-radius: 10px;
